# devops-lab

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md
.github/: debian-const.json  pack.sh
.github/workflows/: ci-cd.yml
Dockerfiles/: ubuntu-22.04.Dockerfile
cmake/: iwyu.cmake
docs/: pipeline.md
source/: main.cpp
src/: CMakeLists.txt  main.cpp
src/arrmax/: arrmax.cpp  arrmax.hpp  version.cpp  version.hpp
test/: CMakeLists.txt  arrmax.cpp
